--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,158 +1,187 @@
 body {
   margin: 0;
-}
-h1 {
-  font-family: PT Sans Narrow Bold, sans-serif;
-  font-size: 1.875em;
-  color: #323232;
-}
-h2 {
-  font-family: PT Sans Narrow Bold, sans-serif;
-  font-size: 1.5em;
-  color: #00897f;
-  text-transform: uppercase;
-}
-h3 {
-  font-family: PT Serif Regular, serif;
-  font-size: 1em;
-  line-height: 2em;
-  color:#323232;
-}
-p {
-  font-family: PT Serif Regular, serif;
-  font-size: .875em;
-  color: #323232;
-  line-height: 200%;
-}
-a {
-  font-family: PT Serif Bold, serif;
-  font-size: 1em;
-  color:#f26522;
-}
-nav {
-  height: 80px;
-}
-nav h1 {
-  font-family:PT Sans Narrow Bold, sans-serif;
-  font-size: 1.5em;
-  color: #323232;
-  float: left;
-  margin-top: 35px;
-}
-nav p {
-  font-family: PT Sans Regular, sans-serif;
-  font-size: .9em;
-  color: #323232;
-  display: inline-block;
-  float: right;
-  width: 25px;
-  padding-right: 20px;
-  margin-right: 30px;
-  margin-top: 35px;
-}
-.float-left {
-  margin-left: 950px;
-  float: left;
-}
-footer {
-  background-color: #00897f;
-  height: 75%;;
-}
-footer h1 {
-  font-family: PT Sans Narrow Bold, sans-serif;
-  font-size: 1.25em;
-  color: #323232;
-  text-align: center;
-}
-footer img {
-  width: 100%;
-}
-.splash {
-  width: 100%;
-}
-.main {
-  margin: 0 auto;
-  width: 50%;
-}
-.intro {
-  margin: 0 auto;
-  padding-bottom: 25px;
-}
-.intro h1 {
-  text-align: center;
-}
-.kat {
-  float: left;
-  width: 40%;
-  background-color: #eeeeee;
-  height: 250px;
-  padding: 15px;
-}
-.mavis {
-  float: right;
-  width: 40%;
-  background-color: #eeeeee;
-  height: 250px;
-  padding: 15px;
-}
-.kat h2 {
-  text-align: center;
-  padding: 10px;
-}
-.mavis h2 {
-  text-align: center;
-  padding: 10px;
-}
-.cool-cats {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-top: 25px;
-  margin: 0 auto;
-  margin-top: 40px;
-}
-.scoot {
-  margin-right: 20px;
-}
-/*.main_2 {
-  text-align: center;
-  margin: 0 auto;
-  height: 405px;
-}*/
-.main-2 {
-  margin: 0 auto;
-  background-color: #eeeeee;
-  height: 400px;
-}
-.main-2 h1 {
-  text-align: center;
-padding: 40px 0 0 35px;
-}
-.hours {
-  background-color: white;
-  display: inline-block;
-  width: 20%;
-  height: 200px;
-  float: left;
-  padding: 15px;
-  padding-bottom: 25px;
-  margin-left: 25%;
-}
-.contact {
-  display: inline-block;
-  background-color: white;
-  width: 20%;
-  height: 200px;
-  float: right;
-  padding: 15px;
-  padding-bottom: 25px;
-  margin-right: 25%;
-}
-@media(min-width: 660px) {
+  padding: 0;
 }
 
+@media(min-width: 660px) {
+  background-image: url(".assets/images/kats-hero-mobile.jpg");
+  background-repeat: no-repeat;
+}
 /* On devices wider than 940px */
 @media(min-width: 940px) {
+  h1 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.875em;
+    color: #323232;
+  }
+  h2 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.5em;
+    color: #00897f;
+    text-transform: uppercase;
+  }
+  h3 {
+    font-family: PT Serif Regular, serif;
+    font-size: 1em;
+    line-height: 2em;
+    color:#323232;
+  }
+  p {
+    font-family: PT Serif Regular, serif;
+    font-size: .875em;
+    color: #323232;
+    line-height: 200%;
+  }
+  a {
+    font-family: PT Serif Bold, serif;
+    font-size: 1em;
+    color:#f26522;
+  }
+  nav {
+    height: 80px;
+  }
+  nav h1 {
+    font-family:PT Sans Narrow Bold, sans-serif;
+    font-size: 1.5em;
+    color: #323232;
+    float: left;
+    margin-top: 35px;
+  }
+  nav p {
+    font-family: PT Sans Regular, sans-serif;
+    font-size: .9em;
+    color: #323232;
+    display: inline-block;
+    float: right;
+    width: 25px;
+    padding-right: 20px;
+    margin-right: 30px;
+    margin-top: 35px;
+  }
+  .float-left {
+    margin-left: 950px;
+    float: left;
+  }
+  footer {
+    background-color: #00897f;
+    height: 75%;;
+  }
+  footer h1 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.25em;
+    color: #323232;
+    text-align: center;
+  }
+  footer img {
+    width: 100%;
+  }
+  .splash {
+    width: 100%;
+  }
+  .img1 {
+    position: relative;
+    z-index: 1;
+  }
+  .img2 {
+    position: relative;
+    z-index: 2;
+  }
+  .main {
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    min-width: 100%;
+  }
+  .intro {
+    margin: 0 auto;
+    padding-bottom: 25px;
+    width: 50%;
+  }
+  .intro h1 {
+    text-align: center;
+  }
+  .bios {
+    width: 50%;
+    margin: 0 auto;
+  }
+  .kat {
+    float: left;
+    width: 40%;
+    background-color: #eeeeee;
+    height: 50%;
+    padding: 15px;
+  }
+  .mavis {
+    float: right;
+    width: 40%;
+    background-color: #eeeeee;
+    height: 50%;
+    padding: 15px;
+  }
+  .kat h2 {
+    text-align: center;
+    padding: 10px;
+  }
+  .mavis h2 {
+    text-align: center;
+    padding: 10px;
+  }
+  .cool-cats {
+    display: block;
+    height: auto;
+    width: 100%;
+    margin-left: 15%;
+  }
+  .cool-cats img {
+    /*min-height: 36%;
+    min-width: 30%;
+    max-width: 30%;
+    max-height: 36%;*/
+    margin: 0 auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-top: 10%;
+    padding: 2%;
+  }
+  .scoot {
+    margin-right: 3%;
+  }
+  /*.main_2 {
+    text-align: center;
+    margin: 0 auto;
+    height: 405px;
+  }*/
+  .main-2 {
+    margin: 0 auto;
+    background-color: #eeeeee;
+    height: 400px;
+  }
+  .main-2 h1 {
+    text-align: center;
+  padding: 40px 0 0 35px;
+  }
+  .hours {
+    background-color: white;
+    display: inline-block;
+    width: 20%;
+    height: 200px;
+    float: left;
+    padding: 15px;
+    padding-bottom: 25px;
+    margin-left: 25%;
+  }
+  .contact {
+    display: inline-block;
+    background-color: white;
+    width: 20%;
+    height: 200px;
+    float: right;
+    padding: 15px;
+    padding-bottom: 25px;
+    margin-right: 25%;
+  }
 }
 /*le old code for reference*/
 /*body {
