--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -60,35 +60,38 @@ body {
     background-color: #00897f;
     height: 75%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
   footer h1 {
     font-family: PT Sans Narrow Bold, sans-serif;
     font-size: 1.25em;
     color: #323232;
     text-align: center;
+    justify-content: center;
+    margin: auto;
   }
   footer img {
     width: 100%;
+    height: 75%;
     display: flex;
+    align-content: flex-start;
   }
-  .splash {
-    width: 100%;
+  .splash img {
     display: flex;
   }
   .main {
     display: flex;
     margin: 0 auto;
     padding: 0;
-    width: 100%;
     height: auto;
-    min-width: 100%;
+    flex-direction: column;
   }
   .intro {
     margin: 0 auto;
     padding-bottom: 25px;
     width: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
   .intro h1 {
@@ -99,16 +102,16 @@ body {
     width: 50%;
     margin: 0 auto;
     justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
   .kat {
-    float: left;
     width: 40%;
     background-color: #eeeeee;
     height: 50%;
     padding: 15px;
   }
   .mavis {
-    float: right;
     width: 40%;
     background-color: #eeeeee;
     height: 50%;
@@ -127,6 +130,7 @@ body {
     height: auto;
     width: 100%;
     margin-left: 15%;
+    flex-flow: row wrap;
   }
   .cool-cats img {
     margin: 0 auto;
@@ -136,15 +140,15 @@ body {
     margin-top: 10%;
     padding: 2%;
   }
-  .scoot {
-    margin-right: 3%;
-  }
   .main-2 {
     margin: 0 auto;
     background-color: #eeeeee;
     height: 400px;
+  }
+  .justify {
     display: flex;
     justify-content: space-between;
+    flex-direction: row wrap;
   }
   .main-2 h1 {
     text-align: center;
