--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -32,7 +32,7 @@ body {
   }
   nav {
     height: 80px;
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -78,6 +78,7 @@ body {
   }
   .splash img {
     display: flex;
+    width: 100%;
   }
   .main {
     display: flex;
@@ -129,7 +130,6 @@ body {
     display: flex;
     height: auto;
     width: 100%;
-    margin-left: 15%;
     flex-flow: row wrap;
   }
   .cool-cats img {
