--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,7 @@ body {
   }*/
   footer {
     background-color: #00897f;
-    height: 75%;
+    height: 300px;
     display: flex;
     flex-direction: column;
   }
@@ -72,9 +72,7 @@ body {
   }
   footer img {
     width: 100%;
-    height: 75%;
-    display: flex;
-    align-content: flex-start;
+    /*height: 75%;*/
   }
   .splash img {
     display: flex;
@@ -107,15 +105,15 @@ body {
     flex-wrap: wrap;
   }
   .kat {
-    width: 40%;
+    width: 220px;
     background-color: #eeeeee;
-    height: 50%;
+    height: 300px;
     padding: 15px;
   }
   .mavis {
-    width: 40%;
+    width: 220px;
     background-color: #eeeeee;
-    height: 50%;
+    height: 300px;
     padding: 15px;
   }
   .kat h2 {
@@ -143,34 +141,252 @@ body {
   .main-2 {
     margin: 0 auto;
     background-color: #eeeeee;
-    height: 400px;
+    height: 500px;
   }
   .justify {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row wrap;
+    justify-content: space-evenly;
+    height: 80%;
   }
   .main-2 h1 {
-    text-align: center;
+    justify-content: center;
     padding: 40px 0 0 35px;
+    display: flex;
   }
   .hours {
     background-color: white;
-    display: inline-block;
-    width: 20%;
-    height: 200px;
+    display: flex;
+    width: 250px;
+    height: 300px;
     /*float: left;*/
     padding: 15px;
     padding-bottom: 25px;
-    margin-left: 25%;
+    flex-direction: column;
   }
   .contact {
-    display: inline-block;
+    display: flex;
     background-color: white;
-    width: 20%;
-    height: 200px;
+    width: 250px;
+    height: 300px;
     /*float: right;*/
     padding: 15px;
     padding-bottom: 25px;
-    margin-right: 25%;
+    flex-direction: column;
   }
+@media screen and (max-width: 760px) {
+    nav {
+      height: 80px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    nav h1 {
+      font-family:PT Sans Narrow Bold, sans-serif;
+      font-size: 1.5em;
+      color: #323232;
+      margin-top: 35px;
+    }
+    nav p {
+      font-family: PT Sans Regular, sans-serif;
+      font-size: .9em;
+      color: #323232;
+      display: inline-block;
+      width: 25px;
+      padding-right: 20px;
+      margin-right: 30px;
+      margin-top: 35px;
+    }
+    footer {
+      background-color: #00897f;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+    }
+    footer h1 {
+      font-family: PT Sans Narrow Bold, sans-serif;
+      font-size: 1.25em;
+      color: #323232;
+      text-align: center;
+      justify-content: center;
+      margin: auto;
+    }
+    footer img {
+      width: 100%;
+    }
+    .splash img {
+      display: flex;
+      width: 100%;
+    }
+    .main {
+      display: flex;
+      margin: 0 auto;
+      padding: 0;
+      height: auto;
+      flex-direction: column;
+    }
+    .intro {
+      margin: 0 auto;
+      padding-bottom: 25px;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .intro h1 {
+      text-align: center;
+    }
+    .bios {
+      display: flex;
+      width: 50%;
+      margin: 0 auto;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    .kat {
+      width: 220px;
+      background-color: #eeeeee;
+      height: 300px;
+      padding: 15px;
+    }
+    .mavis {
+      width: 220px;
+      background-color: #eeeeee;
+      height: 300px;
+      padding: 15px;
+      margin-top: 40px;
+    }
+    .kat h2 {
+      text-align: center;
+      padding: 10px;
+    }
+    .mavis h2 {
+      text-align: center;
+      padding: 10px;
+    }
+    .cool-cats {
+      display: flex;
+      height: auto;
+      width: 100%;
+      flex-flow: row wrap;
+    }
+    .cool-cats img {
+      margin: 0 auto;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      margin-top: 10%;
+      padding: 2%;
+    }
+    .main-2 {
+      margin: 0 auto;
+      background-color: #eeeeee;
+      height: 500px;
+    }
+    .justify {
+      display: flex;
+      justify-content: space-evenly;
+      height: 80%;
+    }
+    .main-2 h1 {
+      justify-content: center;
+      padding: 40px 0 0 35px;
+      display: flex;
+    }
+    .hours {
+      background-color: white;
+      display: flex;
+      width: 250px;
+      height: 300px;
+      /*float: left;*/
+      padding: 15px;
+      padding-bottom: 25px;
+      flex-direction: column;
+    }
+    .contact {
+      display: flex;
+      background-color: white;
+      width: 250px;
+      height: 300px;
+      /*float: right;*/
+      padding: 15px;
+      padding-bottom: 25px;
+      flex-direction: column;
+    }
+}
+@media screen and (max-width: 580px) {
+  .main-2 {
+    margin: 0 auto;
+    background-color: #eeeeee;
+    height: 100%;
+  }
+  .justify {
+    display: flex;
+    justify-content: space-evenly;
+    height: 100%;
+    flex-direction: column;
+  }
+  .main-2 h1 {
+    justify-content: center;
+    padding: 40px 0 0 35px;
+    display: flex;
+
+  }
+  footer {
+    background-color: #00897f;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 415px) {
+  nav {
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+  }
+  nav h1 {
+    display: flex;
+    font-family:PT Sans Narrow Bold, sans-serif;
+    font-size: 1.5em;
+    color: #323232;
+    margin-top: 35px;
+    text-align: center;
+  }
+  nav p {
+    font-family: PT Sans Regular, sans-serif;
+    font-size: .9em;
+    color: #323232;
+    display: inline-block;
+    width: 25px;
+    padding-right: 20px;
+    margin-right: 30px;
+    margin-top: 35px;
+  }
+  .hours {
+    background-color: white;
+    display: flex;
+    width: 250px;
+    height: 300px;
+    /*float: left;*/
+    padding: 15px;
+    padding-bottom: 25px;
+    flex-direction: column;
+  }
+  .contact {
+    display: flex;
+    background-color: white;
+    width: 250px;
+    height: 300px;
+    /*float: right;*/
+    padding: 15px;
+    padding-bottom: 25px;
+    flex-direction: column;
+    margin-top: 30px;
+  }
+  footer {
+    background-color: #00897f;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+  }
+}
