--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,6 @@ body {
   }*/
   footer {
     background-color: #00897f;
-    height: 300px;
     display: flex;
     flex-direction: column;
   }
@@ -72,7 +71,7 @@ body {
   }
   footer img {
     width: 100%;
-    /*height: 75%;*/
+    height: 300px;
   }
   .splash img {
     display: flex;
@@ -198,7 +197,6 @@ body {
     }
     footer {
       background-color: #00897f;
-      height: 200px;
       display: flex;
       flex-direction: column;
     }
@@ -212,6 +210,7 @@ body {
     }
     footer img {
       width: 100%;
+      height: 250px;
     }
     .splash img {
       display: flex;
@@ -333,9 +332,20 @@ body {
   }
   footer {
     background-color: #00897f;
-    height: 100px;
     display: flex;
     flex-direction: column;
+  }
+  footer h1 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.25em;
+    color: #323232;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+  }
+  footer img {
+    width: 100%;
+    height: 200px;
   }
 }
 @media screen and (max-width: 415px) {
@@ -385,8 +395,38 @@ body {
   }
   footer {
     background-color: #00897f;
-    height: 200px;
     display: flex;
     flex-direction: column;
+  }
+  footer h1 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.25em;
+    color: #323232;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+  }
+  footer img {
+    width: 100%;
+    height: 150px;
+  }
+}
+@media screen and (max-width: 300px) {
+  footer {
+    background-color: #00897f;
+    display: flex;
+    flex-direction: column;
+  }
+  footer h1 {
+    font-family: PT Sans Narrow Bold, sans-serif;
+    font-size: 1.25em;
+    color: #323232;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+  }
+  footer img {
+    width: 100%;
+    height: 100px;
   }
 }
