--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,11 +67,12 @@ body {
     color: #323232;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    height: 70px;
+    margin-top: 35px;
   }
   footer img {
     width: 100%;
-    height: 300px;
+    height: 330px;
   }
   .splash img {
     display: flex;
@@ -140,12 +141,13 @@ body {
   .main-2 {
     margin: 0 auto;
     background-color: #eeeeee;
-    height: 500px;
+    height: 790px;
   }
   .justify {
     display: flex;
+    height: 100%;
     justify-content: space-evenly;
-    height: 80%;
+    margin-top: 120px;
   }
   .main-2 h1 {
     justify-content: center;
@@ -156,7 +158,7 @@ body {
     background-color: white;
     display: flex;
     width: 250px;
-    height: 300px;
+    height: 260px;
     /*float: left;*/
     padding: 15px;
     padding-bottom: 25px;
@@ -166,11 +168,41 @@ body {
     display: flex;
     background-color: white;
     width: 250px;
-    height: 300px;
+    height: 260px;
     /*float: right;*/
     padding: 15px;
     padding-bottom: 25px;
     flex-direction: column;
+  }
+  @media screen and (max-width: 1020px) {
+    .bios {
+      display: flex;
+      width: 50%;
+      margin: 0 auto;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    .kat {
+      width: 220px;
+      background-color: #eeeeee;
+      height: 300px;
+      padding: 15px;
+    }
+    .mavis {
+      width: 220px;
+      background-color: #eeeeee;
+      height: 300px;
+      padding: 15px;
+      margin-top: 40px;
+    }
+    .kat h2 {
+      text-align: center;
+      padding: 10px;
+    }
+    .mavis h2 {
+      text-align: center;
+      padding: 10px;
+    }
   }
 @media screen and (max-width: 760px) {
     nav {
@@ -206,7 +238,8 @@ body {
       color: #323232;
       text-align: center;
       justify-content: center;
-      margin: auto;
+      height: 70px;
+      margin-top: 35px;
     }
     footer img {
       width: 100%;
@@ -279,18 +312,55 @@ body {
     .main-2 {
       margin: 0 auto;
       background-color: #eeeeee;
-      height: 500px;
+      height: 790px;
     }
     .justify {
       display: flex;
       justify-content: space-evenly;
-      height: 80%;
+      height: 100%;
     }
     .main-2 h1 {
       justify-content: center;
       padding: 40px 0 0 35px;
       display: flex;
     }
+    .hours {
+      background-color: white;
+      display: flex;
+      width: 250px;
+      height: 260px;
+      /*float: left;*/
+      padding: 15px;
+      padding-bottom: 25px;
+      flex-direction: column;
+    }
+    .contact {
+      display: flex;
+      background-color: white;
+      width: 250px;
+      height: 260px;
+      /*float: right;*/
+      padding: 15px;
+      padding-bottom: 25px;
+      flex-direction: column;
+    }
+}
+@media screen and (max-width: 580px) {
+  .main-2 {
+    margin: 0 auto;
+    background-color: #eeeeee;
+    height: 790px;
+  }
+  .justify {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-2 h1 {
+    justify-content: center;
+    padding: 40px 0 0 35px;
+    display: flex;
     .hours {
       background-color: white;
       display: flex;
@@ -310,25 +380,7 @@ body {
       padding: 15px;
       padding-bottom: 25px;
       flex-direction: column;
-    }
-}
-@media screen and (max-width: 580px) {
-  .main-2 {
-    margin: 0 auto;
-    background-color: #eeeeee;
-    height: 100%;
-  }
-  .justify {
-    display: flex;
-    justify-content: space-evenly;
-    height: 100%;
-    flex-direction: column;
-  }
-  .main-2 h1 {
-    justify-content: center;
-    padding: 40px 0 0 35px;
-    display: flex;
-
+      margin-top: 35px;
   }
   footer {
     background-color: #00897f;
@@ -341,7 +393,8 @@ body {
     color: #323232;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    mheight: 70px;
+    margin-top: 35px;
   }
   footer img {
     width: 100%;
@@ -372,11 +425,26 @@ body {
     margin-right: 30px;
     margin-top: 35px;
   }
+  .main-2 h1 {
+    justify-content: center;
+    padding: 40px 0 0 35px;
+    display: flex;
+  }
+  .main-2 {
+    margin: 0 auto;
+    background-color: #eeeeee;
+    height: 790px;
+  }
+  .justify {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+  }
   .hours {
     background-color: white;
     display: flex;
     width: 250px;
-    height: 300px;
+    height: 260px;
     /*float: left;*/
     padding: 15px;
     padding-bottom: 25px;
@@ -386,12 +454,12 @@ body {
     display: flex;
     background-color: white;
     width: 250px;
-    height: 300px;
+    height: 260px;
     /*float: right;*/
     padding: 15px;
     padding-bottom: 25px;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 35px;
   }
   footer {
     background-color: #00897f;
@@ -404,7 +472,8 @@ body {
     color: #323232;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    height: 70px;
+    margin-top: 35px;
   }
   footer img {
     width: 100%;
@@ -423,7 +492,8 @@ body {
     color: #323232;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    height: 70px;
+    margin-top: 35px;
   }
   footer img {
     width: 100%;
